MD Settings: Strings sweep.

Tweak wording for not-found messages in lists, and remove periods from single sentences that are not followed by anything else.
Note that some single-sentence strings in settings_strings.grdp still has periods, because in the UI they're either followed by another sentence or a link.

BUG=649068

Review-Url: https://codereview.chromium.org/2758073002
Cr-Commit-Position: refs/heads/master@{#458222}

Former-commit-id: 36641a83225cc90dc457dab7f0db405429448ed4